refact: Adicionando records